--- a/.env
+++ b/.env
@@ -42,3 +42,6 @@ PUSHER_APP_CLUSTER=mt1
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+MAILCHIMP_APIKEY = ffaf9d930fd60fffffa3c8ec903a248d-us4
+MAILCHIMP_LIST_ID = 88de1b6bd4
